[#20879] Ui issue in public ticket url - Total file size message got truncates under attach a file option
[#20879] Ui issue in public ticket url - Total file size message got truncates under attach a file option

--- a/public/src/page/tkt_details/_tkt_details.scss
+++ b/public/src/page/tkt_details/_tkt_details.scss
@@ -972,6 +972,9 @@ li {
         position: relative;
         top: 6px;
     }
+    .no-top {
+        top: 0px;
+    }
     .add_attachment {
         cursor: pointer;
         height: 22px;
